gcc/testsuite/gm2/pim/pass/minmaxreal2.mod
MODULE minmaxreal2 ;  

VAR
   min, max: REAL ;
BEGIN
   min := MIN (REAL) ;
   max := MAX (REAL)
END minmaxreal2.
