gcc/testsuite/gm2/pim/fail/foovaltype.mod
MODULE foovaltype;

VAR x: INTEGER;

BEGIN
  x := VAL(abcd, 0);
END foovaltype.
